modified API call in step definition 004
Signed-off-by: Dennis Grewe <dennis.grewe@hs-esslingen.de>